
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {int ver; int pkt_flags; int data_repres; unsigned short frag_len; unsigned long caller_id; scalar_t__ auth_len; int pkt_type; scalar_t__ ver_minor; } ;
struct TYPE_3__ {int max_xmit; int max_recv; int num_con_items; int num_trn_items; scalar_t__ con_id; scalar_t__ asc_group; } ;
typedef TYPE_1__* PDCE_RPC_BIND ;
typedef TYPE_2__* PDCE_RPC ;
typedef int DCE_RPC_BIND ;
typedef int DCE_RPC ;


 int _DCE_RPC_BIND ;
 scalar_t__ calloc (int,int) ;
 unsigned long lsEncodeUuid (unsigned char*,unsigned char*) ;
 int memcpy (unsigned char*,unsigned short*,int) ;

unsigned char*
lsDceRpcBind(unsigned long cid, unsigned char* uuid, unsigned short ver, unsigned long* pktLen){
 unsigned char* pkt;
 unsigned char* tmp;
 unsigned char transferSyntax[]="8a885d04-1ceb-11c9-9fe8-08002b104860";
 unsigned short ret;
 unsigned long cnt;
 PDCE_RPC_BIND rpc_bind;
 PDCE_RPC rpc;

 pkt=(unsigned char*)calloc(2048, 1);


 tmp=pkt;
 pkt+=sizeof(DCE_RPC);
 rpc_bind=(PDCE_RPC_BIND)pkt;
 rpc_bind->max_xmit = 0x16D0;
 rpc_bind->max_recv = 0x16D0;
 rpc_bind->asc_group = 0;
 rpc_bind->num_con_items = 1;
 rpc_bind->con_id = 0;
 rpc_bind->num_trn_items = 1;
 pkt+=sizeof(DCE_RPC_BIND);
 cnt=lsEncodeUuid(uuid, pkt);
 pkt+=cnt;
 memcpy(pkt, &ver, sizeof(short));
 pkt+=sizeof(short);
 *pkt++=0;
 *pkt++=0;
 cnt=lsEncodeUuid(transferSyntax, pkt);
 pkt+=cnt;
 *pkt++=2;
 *pkt++=0;


 ret=pkt+2-tmp;
 rpc=(PDCE_RPC)tmp;
 rpc->ver = 5;
 rpc->ver_minor = 0;
 rpc->pkt_type = _DCE_RPC_BIND;
 rpc->pkt_flags = 3;
 rpc->data_repres = 16;
 rpc->frag_len = ret;
 rpc->auth_len = 0;
 rpc->caller_id = cid;

 *pktLen=ret;

 return(tmp);
}
