; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_28765.c_lsDceRpcBind.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_28765.c_lsDceRpcBind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i64, i64 }
%struct.TYPE_4__ = type { i32, i32, i32, i16, i64, i64, i32, i64 }

@__const.lsDceRpcBind.transferSyntax = private unnamed_addr constant [37 x i8] c"8a885d04-1ceb-11c9-9fe8-08002b104860\00", align 16
@_DCE_RPC_BIND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lsDceRpcBind(i64 %0, i8* %1, i16 zeroext %2, i64* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i16, align 2
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca [37 x i8], align 16
  %12 = alloca i16, align 2
  %13 = alloca i64, align 8
  %14 = alloca %struct.TYPE_3__*, align 8
  %15 = alloca %struct.TYPE_4__*, align 8
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i16 %2, i16* %7, align 2
  store i64* %3, i64** %8, align 8
  %16 = bitcast [37 x i8]* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %16, i8* align 16 getelementptr inbounds ([37 x i8], [37 x i8]* @__const.lsDceRpcBind.transferSyntax, i32 0, i32 0), i64 37, i1 false)
  %17 = call i64 @calloc(i32 2048, i32 1)
  %18 = inttoptr i64 %17 to i8*
  store i8* %18, i8** %9, align 8
  %19 = load i8*, i8** %9, align 8
  store i8* %19, i8** %10, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 4
  store i8* %21, i8** %9, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = bitcast i8* %22 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %23, %struct.TYPE_3__** %14, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i32 5840, i32* %25, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 1
  store i32 5840, i32* %27, align 4
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 5
  store i64 0, i64* %29, align 8
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 2
  store i32 1, i32* %31, align 8
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 4
  store i64 0, i64* %33, align 8
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 3
  store i32 1, i32* %35, align 4
  %36 = load i8*, i8** %9, align 8
  %37 = getelementptr inbounds i8, i8* %36, i64 4
  store i8* %37, i8** %9, align 8
  %38 = load i8*, i8** %6, align 8
  %39 = load i8*, i8** %9, align 8
  %40 = call i64 @lsEncodeUuid(i8* %38, i8* %39)
  store i64 %40, i64* %13, align 8
  %41 = load i64, i64* %13, align 8
  %42 = load i8*, i8** %9, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 %41
  store i8* %43, i8** %9, align 8
  %44 = load i8*, i8** %9, align 8
  %45 = call i32 @memcpy(i8* %44, i16* %7, i32 2)
  %46 = load i8*, i8** %9, align 8
  %47 = getelementptr inbounds i8, i8* %46, i64 2
  store i8* %47, i8** %9, align 8
  %48 = load i8*, i8** %9, align 8
  %49 = getelementptr inbounds i8, i8* %48, i32 1
  store i8* %49, i8** %9, align 8
  store i8 0, i8* %48, align 1
  %50 = load i8*, i8** %9, align 8
  %51 = getelementptr inbounds i8, i8* %50, i32 1
  store i8* %51, i8** %9, align 8
  store i8 0, i8* %50, align 1
  %52 = getelementptr inbounds [37 x i8], [37 x i8]* %11, i64 0, i64 0
  %53 = load i8*, i8** %9, align 8
  %54 = call i64 @lsEncodeUuid(i8* %52, i8* %53)
  store i64 %54, i64* %13, align 8
  %55 = load i64, i64* %13, align 8
  %56 = load i8*, i8** %9, align 8
  %57 = getelementptr inbounds i8, i8* %56, i64 %55
  store i8* %57, i8** %9, align 8
  %58 = load i8*, i8** %9, align 8
  %59 = getelementptr inbounds i8, i8* %58, i32 1
  store i8* %59, i8** %9, align 8
  store i8 2, i8* %58, align 1
  %60 = load i8*, i8** %9, align 8
  %61 = getelementptr inbounds i8, i8* %60, i32 1
  store i8* %61, i8** %9, align 8
  store i8 0, i8* %60, align 1
  %62 = load i8*, i8** %9, align 8
  %63 = getelementptr inbounds i8, i8* %62, i64 2
  %64 = load i8*, i8** %10, align 8
  %65 = ptrtoint i8* %63 to i64
  %66 = ptrtoint i8* %64 to i64
  %67 = sub i64 %65, %66
  %68 = trunc i64 %67 to i16
  store i16 %68, i16* %12, align 2
  %69 = load i8*, i8** %10, align 8
  %70 = bitcast i8* %69 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %70, %struct.TYPE_4__** %15, align 8
  %71 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %72 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %71, i32 0, i32 0
  store i32 5, i32* %72, align 8
  %73 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %74 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %73, i32 0, i32 7
  store i64 0, i64* %74, align 8
  %75 = load i32, i32* @_DCE_RPC_BIND, align 4
  %76 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %77 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %76, i32 0, i32 6
  store i32 %75, i32* %77, align 8
  %78 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %79 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %78, i32 0, i32 1
  store i32 3, i32* %79, align 4
  %80 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %81 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %80, i32 0, i32 2
  store i32 16, i32* %81, align 8
  %82 = load i16, i16* %12, align 2
  %83 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %84 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %83, i32 0, i32 3
  store i16 %82, i16* %84, align 4
  %85 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %86 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %85, i32 0, i32 5
  store i64 0, i64* %86, align 8
  %87 = load i64, i64* %5, align 8
  %88 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %89 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %88, i32 0, i32 4
  store i64 %87, i64* %89, align 8
  %90 = load i16, i16* %12, align 2
  %91 = zext i16 %90 to i64
  %92 = load i64*, i64** %8, align 8
  store i64 %91, i64* %92, align 8
  %93 = load i8*, i8** %10, align 8
  ret i8* %93
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @calloc(i32, i32) #2

declare dso_local i64 @lsEncodeUuid(i8*, i8*) #2

declare dso_local i32 @memcpy(i8*, i16*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
